--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container mx-auto p-4">
         <h1 class="text-3xl font-bold text-blue-600">Welcome to My Webpage of Progress</h1>
-        <p class="mt-4 text-gray-700">Start building with Tailwind CSS!</p>
+        <p class="mt-4 text-gray-700">Oh the places you can go...</p>
     </div>
 </body>
 </html>
