added left and right sidebars with gray background color

--- a/index.html
+++ b/index.html
@@ -7,9 +7,24 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <div class="container mx-auto p-4">
-        <h1 class="text-3xl font-bold text-blue-600">Welcome to My Webpage of Progress</h1>
-        <p class="mt-4 text-gray-700">Oh the places you can go...</p>
+    <nav class="bg-gray-800 p-4">
+        <ul class="flex space-x-4">
+            <li><a href="/" class="text-white hover:text-gray-300">Home</a></li>
+            <li><a href="/about" class="text-white hover:text-gray-300">About</a></li>
+            <li><a href="/contact" class="text-white hover:text-gray-300">Experiences</a></li>
+        </ul>
+    </nav>
+    <div class="head-container flex">
+        <div class="left-bar bg-gray-400 flex flex-col p-4 w-1/4">
+            <p>stuff</p>
+        </div>
+        <div class="flex-1 p-4">
+            <h1 class="flex justify-center text-3xl font-bold text-purple-900">Welcome to My Webpage of Progress</h1>
+            <p class="mt-4 text-gray-700 flex justify-center">This is just a page with a bunch of knowledge and experiences I'm excited to share and remind myself of as I make progress to my goals.</p>
+        </div>
+        <div class="right-bar bg-gray-400 flex flex-col p-4 w-1/4">
+            <p>stuff 2</p>
+        </div>
     </div>
 </body>
 </html>
