--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <li><a href="/" class="text-white hover:text-gray-300">Home</a></li>
             <li><a href="/about" class="text-white hover:text-gray-300">About</a></li>
             <li><a href="/contact" class="text-white hover:text-gray-300">Experiences</a></li>
+            <li><a href="/Budget/budget.html" class="text-white hover:text-gray-300">Budget</a></li>
         </ul>
     </nav>
     <div class="head-container flex">
